Fixed bug where dropdown content would sometimes overflow dropdown

--- a/client/scss/_768up.scss
+++ b/client/scss/_768up.scss
@@ -323,7 +323,6 @@ $nav-item-margin: 10px;
 	&__card{
 		position: absolute;
 		background-color: $spring-wood;
-		width: 266px;
 		padding: 13px;
 		box-sizing: border-box;
 		z-index:2;
