--- a/client/scss/_base.scss
+++ b/client/scss/_base.scss
@@ -160,6 +160,7 @@ input{
 	display:block;
 	font-size:15px;
 	&--link{
+		padding-right:20px;
 		margin-bottom:15px;
 	}
 	&--success, &--error{
